# fib-rs

./: CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: ci-cd.yaml  ci.yaml  deploy.yaml  publish.yaml
.github/workfows/: ci.yaml
assets/: styles.css
benches/: benchmarks.rs
scripts/: install.sh  package-checks.sh
src/: lib.rs  main.rs
style/: main.css
tests/: cli_tests.rs  lib_tests.rs  tests.rs
