[package]
name = "fib-rs"
version = "0.4.5"
edition = "2024"
description = "A fast Fibonacci number calculator"
repository = "https://github.com/excoffierleonard/fib-rs"
documentation = "https://docs.rs/fib-rs"
license = "MIT"
keywords = ["fibonacci", "fib", "fib-rs", "math", "algorithm"]
categories = ["algorithms", "mathematics"]
readme = "README.md"

[features]
default = ["cli"]
cli = ["clap"]
web = ["leptos", "leptos-use"]

[dependencies]
# Core dependencies
num-bigint = "0.4.6"
num-traits = "0.2.19"
rayon = "1.10.0"

# CLI dependencies
clap = { version = "4.5.37", features = ["derive"], optional = true }

# Web dependencies
leptos = { version = "0.7.8", features = ["csr"], optional = true }
leptos-use = { version = "0.15.7", features = ["use_toggle"], optional = true }

[dev-dependencies]
criterion = "0.5.1"
num-format = "0.4.4"
assert_cmd = "2.0"
predicates = "3.0"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "fib"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "fib-web"
path = "src/bin/web.rs"
required-features = ["web"]
